--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 	<meta name="author" content="Dzmitry Kavalenka">
 </head>
 
-<body></body>
+<body>
+	<form onsubmit = return "addTodoItem()">
+	<p>Please insert the items</p>
+	<input type="text" id="box">
+	<input type="submit" value="Submit">
+	</form>
+</body>
 
+<script src="functions.js"></script>
 <script src="script.js"></script>
 
 </html>
