--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
 
-<html lang="en">
 <head>
-	<meta charset="utf-8">
-
-	<title>My homework</title>
-	<meta name="description" content="First homework">
-	<meta name="author" content="Dzmitry Kavalenka">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
 </head>
 
 <body>
-	<form onsubmit = return "addTodoItem()">
-	<p>Please insert the items</p>
-	<input type="text" id="box">
-	<input type="submit" value="Submit">
-	</form>
-</body>
 
-<script src="functions.js"></script>
-<script src="script.js"></script>
+    <script src="functions.js"></script>
+    <script src="script.js"></script>
+</body>
 
 </html>
